# Crafting-Interpreters

./: README.md
CSharpLox/Crafting Interpreters/: Environment.cs  Lox.cs  Token.cs
CSharpLox/Crafting Interpreters/AST/: Expr.cs  Stmt.cs
CSharpLox/Crafting Interpreters/Classes/: LoxClass.cs  LoxInstance.cs
CSharpLox/Crafting Interpreters/Errors/: ParseError.cs  Return.cs  RuntimeError.cs
CSharpLox/Crafting Interpreters/Interpreters/: Interpreter.cs  Resolver.cs
CSharpLox/Crafting Interpreters/LoxFunctions/: Clock.cs  LoxFunction.cs
CSharpLox/Crafting Interpreters/Misc/: AstPrinter.cs
CSharpLox/Crafting Interpreters/Parse/: Parser.cs  Scanner.cs
CSharpLox/Crafting Interpreters/Properties/: launchSettings.json
Clox/: .gitignore  CMakeLists.txt
Clox/include/: chunk.h  memory.h  scanner.h  value.h  vm.h
Clox/src/: chunk.c  compiler.c  debug.c  main.c  scanner.c  value.c  vm.c
Crafting Interpreters/: AstPrinter.cs  Clock.cs  Crafting Interpreters.csproj  Crafting Interpreters.sln  Environment.cs  Expr.cs  Interpreter.cs  Lox.cs  LoxFunction.cs  Parser.cs  Program.cs  Resolver.cs  Scanner.cs  Stmt.cs  Token.cs
Crafting Interpreters/Classes/: LoxClass.cs  LoxInstance.cs
Crafting Interpreters/Errors/: ParseError.cs  Return.cs  RuntimeError.cs
Crafting Interpreters/Interpreters/: Interpreter.cs  Resolver.cs
Crafting Interpreters/Parse/: Parser.cs  Scanner.cs
Crafting Interpreters/Properties/: launchSettings.json
Crafting Interpreters/interface/: LoxCallable.cs
Tools/: Program.cs  Tools.sln
Tools/Properties/: launchSettings.json
(+1 files in other folders)
